@@ -1,53 +1,53 @@
-df0997085581880682098c45e392c2b0 *DESCRIPTION
+3ead017746ee142eeaa82137cefe4c29 *DESCRIPTION
 9023f060a8aa0d9f16566887e1f561e7 *LICENCE.note
 a2437fe61640a0e31060e6a16a28d50e *NAMESPACE
-a2d494c39d7b3721c353268f19d89f83 *NEWS
+2a8d4f3e4ad336e60b5d11b95b8d4b7a *NEWS
 869e905a54815e650868264a2bee1264 *R/AO.R
-10f1d0a5d479f8b062e968bb44f89368 *R/clm.R
-731f5ca5c9639bdea26d5d00add1e8dd *R/clm.Thetamat.R
+b5172dd6e7b5f7f23e133cd279cbb15b *R/clm.R
+8f0c1d0af7f7f68728acced4e978c364 *R/clm.Thetamat.R
 b1b280d156278f991729d0e9d39d70ff *R/clm.anova.R
-7053609e38d3620ddb5463b958f1f7ab *R/clm.fit.R
-ccb40544832f75098125a13240d385d7 *R/clm.fitter.R
+b90d5a1c5abb244750e275a4d0ffec92 *R/clm.fit.R
+cb4448c0e954f202b681a4665f9b1c38 *R/clm.fitter.R
 70fc4552bed2aa792527407004c537d5 *R/clm.frames.R
 4e2e7da3c00311fdc12b7d4e84d76917 *R/clm.methods.R
 c38157d19765d99728b11d20dba4eb3c *R/clm.nominal_test.R
 28268872112a7ef9d93f81399e7d8d07 *R/clm.predict.R
-e3394b22eaef669aec41d360f3f591e7 *R/clm.profile.R
-08232e3e7ea2fde1c5ce5019c5b60616 *R/clm.simple.R
+fb19cbdce82cbdfc755dc7df56a78b7a *R/clm.profile.R
+f8e467dda373e544c79f853bcccf5db8 *R/clm.simple.R
 27531994978ef842f9225558d98f5e8a *R/clm.slice.R
 c2d95a71c7b8f8a2bfbadd9655dbfdba *R/clm.slice2D.R
-a2d94ac2fd3061d68d29cc1b8793b712 *R/clm.start.R
+3dbf13015e277e7e1c5442491a8899fe *R/clm.start.R
 c86d631d774ae572238027cb380e7e8d *R/clm2.R
 bbfecf069481a5a27609b7102f6a7cb8 *R/clmm.R
 a4cfd611edfc0ef2ec7c84557d20bd09 *R/clmm.formula.R
 a242d8385d958d9ad27c84fccd868ff7 *R/clmm.methods.R
 d35ded8d8e8111cbc8a4e4a6debe76c0 *R/clmm.ranef.R
-1e777385bdf077e561fdef59d9ebfcea *R/clmm.ssr.R
+63ca18ecb9e0d7ffb8eed7bb247737ad *R/clmm.ssr.R
 ef3d4639d726be5e417a7558e431ce53 *R/clmm.start.R
 10d62d2cb10d2269d7e3669db3f757dd *R/clmm2.R
 5559c014ae600a2f031e897edbbda6a2 *R/clmm2.utils.R
 6cfb772181a1ee478b22fdc694c6f0ec *R/contrast_utils.R
 b52732b2ab5c0113c320df484faec3f9 *R/control.R
-292b27412987d5be62ead5ffcc597ad1 *R/convergence.R
+06b4ec45624a187e02c9b127239f4156 *R/convergence.R
 fa85118c3a5612847e6e2e8a62055191 *R/derivatives.R
 7d6871b41f4736f496326c81873124a8 *R/drop.coef.R
 8d4f671d30b5f7c22395b50297aeadcf *R/gdist.R
 651a98b5b14214833f69063bdacaaa62 *R/gumbel.R
 ffd316f2d6501837566bd3c182213dd9 *R/lgamma.R
 274843603afe2a4e57d9117dbcf9f73b *R/terms_utils.R
-61dbb10c7a44b8b495e2932a59d0ef49 *R/utils.R
+7dd6b54f58ac7846a3afb3006f55e6a5 *R/utils.R
 e464fea09b4a6386417c6e5f382bd529 *R/warning_functions.R
 f03be3092abad988ab2989b17023b588 *build/vignette.rds
 63eb28b797efedb31ad1f5db75ddfa0b *data/income.rda
 de5d075c95248681323ce9e571e7d0a2 *data/soup.rda
 50b83b93508e5c5a9085d5204cb9ff09 *data/wine.rda
-0b7473ccedfabb17989c25a0076fc293 *inst/CITATION
+b7f57dc62ba4df06bcfc94a8da23edb7 *inst/CITATION
 ae3b9374f095160fe80630038bbaf34e *inst/doc/clm_article.R
 26c233139e172037013c4e8f138118eb *inst/doc/clm_article.Rnw
-282cceec29046270556ddca01ac69312 *inst/doc/clm_article.pdf
+25353b05a3fcebba49eb33bf5fe63949 *inst/doc/clm_article.pdf
 64aaa511c3b4dc72b6c004106553bf97 *inst/doc/clmm2_tutorial.R
 ddde6e9af6699c2d9c11002d12e3049e *inst/doc/clmm2_tutorial.Rnw
-bcab69a7ccdec70cd5e8eb1b4ccbb262 *inst/doc/clmm2_tutorial.pdf
+8f0e52c67159cc512ff8cf5e475209d3 *inst/doc/clmm2_tutorial.pdf
 bd8055e0c9cc16fdf95f9caebc942c53 *man/VarCorr.Rd
 4d295ce70b37b9409b0b74eb6ae7d0b2 *man/addtermOld.Rd
 fbbfa8a549ecc09ad66aa0e00d1f6d1b *man/anovaOld.Rd
